Yt : récupérer durée + date de création + views pagination recherche de decks User: pseudo par défaut + unicité pseudo, empecher le rename déjà pris Maj issuer-uri avec custom domain